змінила дизайн програми, логи